<resources>
    <string name="app_name">Kade3</string>
    <string name="goals">Goals</string>
    <string name="shots">Shots</string>
    <string name="lineups">Lineups</string>
    <string name="substitutes">Substitutes</string>
    <string name="away_badge">away badge</string>
    <string name="home_badge">home badge</string>
    <string name="versus">\u0020vs\u0020</string>
    <string name="favorites">Favorites</string>
    <string name="previous">Previous</string>
    <string name="next">Next</string>
    <string name="matches">Matches</string>
    <string name="teams">Teams</string>
    <string name="search">Search</string>
    <string name="weight">Weight</string>
    <string name="height">Height</string>
    <array name="league">
        <item>English Premier League</item>
        <item>English League Championship</item>
        <item>German Bundesliga</item>
        <item>Italian Serie A</item>
        <item>French Ligue 1</item>
        <item>Spanish La Liga</item>
    </array>
</resources>
