<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
            android:id="@+id/prev_match_menu"
            android:enabled="true"
            android:title="@string/previous"
            android:icon="@drawable/prev"
            app:showAsAction="always"/>

    <item
            android:id="@+id/next_match_menu"
            android:enabled="true"
            android:icon="@drawable/next"
            android:title="@string/next"
            app:showAsAction="always"/>

    <item
            android:id="@+id/favorites"
            android:enabled="true"
            android:icon="@drawable/ic_favorites"
            android:title="@string/favorites"
            app:showAsAction="always"/>


</menu>