<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".View.EventActivity"
        android:padding="16dp"
        android:orientation="vertical">

    <ProgressBar
            android:id="@+id/pb_event_id"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

    <TextView
            android:id="@+id/dateEventId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:text="Sun, 23 Sep 2018"
            android:gravity="center_horizontal"/>

    <TextView
            android:id="@+id/scoreEventId"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            tools:text="0 vs 0"
            android:paddingBottom="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:baselineAligned="false">

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical"
                android:paddingBottom="8dp" tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:id="@+id/homeTeamBadgeId"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/home_badge"
                    android:layout_gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/team1EventId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Manchester United"
                    android:gravity="center_horizontal"/>

        </LinearLayout>

        <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:orientation="vertical" tools:ignore="UseCompoundDrawables">

            <ImageView
                    android:id="@+id/awayTeamBadgeId"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:contentDescription="@string/away_badge"
                    android:layout_gravity="center_horizontal"/>

            <TextView
                    android:id="@+id/team2EventId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    tools:text="Manchester City"
                    android:paddingBottom="8dp"
                    android:gravity="center_horizontal"/>

        </LinearLayout>

    </LinearLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/goals"
            android:gravity="center_horizontal"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/homeGoalDetailsId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="pemain 1\npemain 2"/>

        <TextView
                android:id="@+id/awayGoalDetailsId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="pemain 1\npemain 2"
                android:textDirection="rtl"
                android:paddingBottom="8dp"/>

    </LinearLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/shots"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

        <TextView
                android:id="@+id/homeShotsId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                tools:text="3"/>

        <TextView
                android:id="@+id/awayShotsId"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="3"
                android:textDirection="rtl"
                tools:text="3"/>

    </LinearLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/lineups"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp">

        <TextView
                android:id="@+id/homeLineUps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="pemain 1\npemain 2"/>

        <TextView
                android:id="@+id/awayLineUps"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="pemain 1\npemain 2"
                android:textDirection="rtl"
                android:paddingBottom="8dp"/>

    </LinearLayout>

    <View
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000"/>

    <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/substitutes"
            android:paddingTop="8dp"
            android:paddingBottom="8dp"/>

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <TextView
                android:id="@+id/homeSub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="pemain 1\npemain 2"/>

        <TextView
                android:id="@+id/awaySub"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                tools:text="pemain 1\npemain 2"
                android:textDirection="rtl"
                android:paddingBottom="8dp"/>

    </LinearLayout>

</LinearLayout>